Switched to PC mediaselector.
New mediaselector also adds the following new features:
- Access to new CDN Cloudfront (Amazon)
- Access to new subtitle sources. If you experience issues with subtitles, first try the new "Subtitle source" setting in the add-on settings before reporting issues.

v3.0.49
Fixes for new subtitle XML format.
Added initial compatibility with Python 3 (does not work on 19 yet).
Fixed issue for programmes with multiple pages.

v3.0.48
Added support for BBC Scotland.

v3.0.47
Fixed broken DASH streaming due to discontinuation of http service.

v3.0.46
Fixed sign in.
Fixed CRLF in changelog.txt

v3.0.45
Fixed Added and Watching.

v3.0.44
Preserve all subtitle colours to indicate speaker changes.
Fixed new JSON format for Highlights.

v3.0.43
Adapt to new JSON format for all expected cases.
In particular fixed A-Z based on this change.

v3.0.42
Added fallback for experimental JSON data.

v3.0.41
Fixed Categories.
(Dirty) fix for new series view.

v3.0.40
Fix duplicate of last subtitle.

v3.0.39
Fixed episode JSON changes.

v3.0.38
Programme scraping now relies on JSON only.
Refactored code scraping.

v3.0.37
Fixed Most Popular.

v3.0.36
Adapted to new JSON structure.

v3.0.35
Added support for colored subtitles.

v3.0.34
Fixed A-Z.
Fixed Categories.

v3.0.33
Fixed Radio A-Z.
Added additional stream sources for Radio.
Fixed Radio scraping in general.

v3.0.32
Fixed Radio for programmes which contain semicolon in the json data.

v3.0.31
Fixed Channel A-Z.

v3.0.30
Fixed single episodes in A-Z.

v3.0.29
Fixed Radio Categories and A-Z.

v3.0.28
Fixed Highlights and Channel Highlights.
Added UHD Trial Channels (only work in Kodi 18 with latest inputstream.adaptive).

v3.0.27
Fixed Catgeories again.

v3.0.26
Categories fix.

v3.0.25
Fixed problem with episodes that are not available in standard format.

v3.0.24
Fixed pagination for Categories.

v3.0.23
Switched everything to https.
Fixed problem with pagination.

v3.0.22